Source/WebCore/platform/mac/ScrollAnimatorMac.mm
@@ -1304,6 +1304,7 @@ void ScrollAnimatorMac::updateScrollerStyle()
 
         NSScrollerImp *oldVerticalPainter = [m_scrollbarPainterController verticalScrollerImp];
         NSScrollerImp *newVerticalPainter = [NSScrollerImp scrollerImpWithStyle:newStyle controlSize:(NSControlSize)verticalScrollbar->controlSize() horizontal:NO replacingScrollerImp:oldVerticalPainter];
+        m_scrollableArea.setScrollbarLayoutDirection(newVerticalPainter);
 
         [m_scrollbarPainterController setVerticalScrollerImp:newVerticalPainter];
         macTheme->setNewPainterForScrollbar(*verticalScrollbar, newVerticalPainter);
@@ -1320,6 +1321,7 @@ void ScrollAnimatorMac::updateScrollerStyle()
 
         NSScrollerImp *oldHorizontalPainter = [m_scrollbarPainterController horizontalScrollerImp];
         NSScrollerImp *newHorizontalPainter = [NSScrollerImp scrollerImpWithStyle:newStyle controlSize:(NSControlSize)horizontalScrollbar->controlSize() horizontal:YES replacingScrollerImp:oldHorizontalPainter];
+        m_scrollableArea.setScrollbarLayoutDirection(newHorizontalPainter);
 
         [m_scrollbarPainterController setHorizontalScrollerImp:newHorizontalPainter];
         macTheme->setNewPainterForScrollbar(*horizontalScrollbar, newHorizontalPainter);
