Source/WebCore/platform/mac/ScrollbarThemeMac.mm
@@ -160,6 +160,7 @@ void ScrollbarThemeMac::registerScrollbar(Scrollbar& scrollbar)
 
     bool isHorizontal = scrollbar.orientation() == HorizontalScrollbar;
     NSScrollerImp *scrollbarPainter = [NSScrollerImp scrollerImpWithStyle:recommendedScrollerStyle() controlSize:scrollbarControlSizeToNSControlSize(scrollbar.controlSize()) horizontal:isHorizontal replacingScrollerImp:nil];
+    scrollbar.scrollableArea().setScrollbarLayoutDirection(scrollbarPainter);
     scrollbarMap()->add(&scrollbar, scrollbarPainter);
     updateEnabledState(scrollbar);
     updateScrollbarOverlayStyle(scrollbar);
