Source/WebCore/testing/Internals.cpp
@@ -2737,6 +2737,11 @@ void Internals::setUsesMockScrollAnimator(bool enabled)
     WebCore::Settings::setUsesMockScrollAnimator(enabled);
 }
 
+void Internals::setMockScrollbarsEnabled(bool enabled)
+{
+    WebCore::Settings::setMockScrollbarsEnabled(enabled);
+}
+
 void Internals::forceReload(bool endToEnd)
 {
     frame()->loader().reload(endToEnd);
